Fix for BUG#3415 "mysqlbinlog loses a USE command when LOAD DATA INFILE is involved": if you are printing LOAD DATA INFILE and its USE as comments, don't update 'last_db' (because you have not actually changed the db in the server).